--- a/public/wp-content/themes/blackrock/scss/modules/_modal_popup.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_modal_popup.scss
@@ -23,6 +23,7 @@
         appearance: none;
         padding: 0;
         background-color: transparent;
+        z-index: 10;
 
         svg {
             pointer-events: none;
