--- a/public/wp-content/themes/blackrock/scss/modules/_contact.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_contact.scss
@@ -1,134 +1,142 @@
 .contact-module-container {
-    background-color: #000000;
-    width: 100vw;
-    margin-top: calc(100vw / 12);
-    padding-top: calc(100vw / 12);
-    padding-bottom: calc(100vw / 12);
-    position: relative;
-    z-index: 4;
+	background-color: #000000;
+	width: 100vw;
+	margin-top: calc(100vw / 12);
+	padding-top: 0;
+	padding-bottom: 0;
+	position: relative;
+	z-index: 4;
 
-    .contacts-container {
-        @include grid;
-        
-        @media #{$mq-tablet-port}{
-            grid-template-columns: 6fr 1fr 5fr;
-            grid-template-areas: "contacts . img ";
-        }
+	@media #{$mq-tablet-port} {
+		margin-top: calc(100vw / 12);
+		padding-top: calc(100vw / 12);
+		padding-bottom: calc(100vw / 12);
+	}
 
-        .left {
-            @include grid;
-            align-content: space-evenly;
-            grid-area: contacts;
-            margin: 0 !important;
-            padding-top: calc(100vw / 12);
+	.contacts-container {
+		@include grid;
 
-            .copy {
-                display: block;
-                height: auto;
-                padding: 0;
-                margin: 0;
-                
+		@media #{$mq-tablet-port} {
+			grid-template-columns: 6fr 1fr 5fr;
+			grid-template-areas: "contacts . img ";
+		}
 
-                h2 {
-                    @include headline-30;
-                    padding-bottom: calc(100vw / 24);
-                    color: white;
-                    margin-left: 20px;
-                    margin-bottom: 40px;
-                    margin-top: 0;
+		.left {
+			@include grid;
+			align-content: space-evenly;
+			grid-area: contacts;
+			margin: 0 !important;
+			padding-top: calc(100vw / 12);
 
-                    @media #{$mq-tablet-port}{
-                        @include headline-50;
-                        margin-left: 0;
-                    }
-                }
+			.copy {
+				display: block;
+				height: auto;
+				padding: 0;
+				margin: 0;
 
-                img {
-                    width: 100px;
-                    margin-left: 20px;
-                    margin-bottom: 40px;
 
-                    @media #{$mq-tablet-port}{
-                        width: auto;
-                        margin-left: 0;
-                        margin-bottom: 0;
-                        margin-top: calc(100vw / 12);
-                        margin-bottom: calc(100vw / 24);
-                    }   
-                }
-            }
-        }
+				h2 {
+					@include headline-30;
+					padding-bottom: calc(100vw / 24);
+					color: white;
+					margin-left: 20px;
+					margin-bottom: 40px;
+					margin-top: 0;
 
-        .contacts {
-            @include grid;
-            
-            @media #{$mq-tablet-port}{
-                padding: 0 !important;
-                margin: 0 !important;
-                
-                grid-template-columns: repeat(3, 1fr);
-            }
+					@media #{$mq-tablet-port} {
+						@include headline-50;
+						margin-left: 0;
+					}
+				}
 
-            .contact {
-                margin: 20px;
-                border-top: 2px solid white;
-                @include body-20;
-                color: $br-white;
+				img {
+					width: 100px;
+					margin-left: 20px;
+					margin-bottom: 40px;
 
-                @media #{$mq-tablet-port}{
-                    margin: 0;
-                }
+					@media #{$mq-tablet-port} {
+						width: auto;
+						margin-left: 0;
+						margin-bottom: 0;
+						margin-top: calc(100vw / 12);
+						margin-bottom: calc(100vw / 24);
+					}
+				}
+			}
+		}
 
-                h3, h4 {
-                    @include body-20;
-                }
+		.contacts {
+			@include grid;
 
-                h3 {
-                    margin-bottom: 0;
-                    padding-bottom: 0;
-                }
+			@media #{$mq-tablet-port} {
+				padding: 0 !important;
+				margin: 0 !important;
 
-                h4 {
-                    margin-top: 0;
-                }
+				grid-template-columns: repeat(3, 1fr);
+			}
 
-                a {
-                    color: $br-white;
-                }
+			.contact {
+				margin: 20px;
+				border-top: 2px solid white;
+				@include body-20;
+				color: $br-white;
 
-                &:last-child {
-                    padding-bottom: 40px;
+				@media #{$mq-tablet-port} {
+					margin: 0;
+				}
 
-                    @media #{$mq-tablet-port}{
-                        padding-bottom: 0;    
-                    }
-                }
-            }
-        }
+				h3,
+				h4 {
+					@include body-20;
+				}
 
-        .image-container {
-            grid-area: img;
+				h3 {
+					margin-bottom: 0;
+					padding-bottom: 0;
+				}
 
-            @media #{$mq-tablet-port}{
-                position: sticky;
-                top: 0;
-            }
-        }
-    }
+				h4 {
+					margin-top: 0;
+				}
 
-    .contact-logo {
-        width: calc((100vw - 80px) / 12);
-    }       
+				a {
+					color: $br-white;
+				}
+
+				&:last-child {
+					padding-bottom: 40px;
+
+					@media #{$mq-tablet-port} {
+						padding-bottom: 0;
+					}
+				}
+			}
+		}
+
+		.image-container {
+			grid-area: img;
+			line-height: 0;
+
+			@media #{$mq-tablet-port} {
+				position: sticky;
+				top: 0;
+			}
+		}
+	}
+
+	.contact-logo {
+		width: calc((100vw - 80px) / 12);
+	}
 }
 
 .contact-open .contact-module-container {
-    transform: translateX(0);
+	transform: translateX(0);
 }
 
 .home .contact-module-container {
-    margin-top: 0;
-    
-    @media #{$mq-tablet-port}{
-        margin-top: calc((100vh - 80px) *-1);
-    }
+	margin-top: 0;
+
+	@media #{$mq-tablet-port} {
+		margin-top: calc((100vh - 80px) *-1);
+	}
 }
