--- a/public/wp-content/themes/blackrock/scss/modules/_image_carousel.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_image_carousel.scss
@@ -1,17 +1,17 @@
 .image-carousel {
     position: relative;
-    margin-top: 40px;
+    margin-top: 100px;
 
-    @media #{$mq-tablet-port}{
+    @media #{$mq-tablet-port} {
         margin-top: calc(100vw / 12);
     }
 
     .caption {
-        @media #{$mq-tablet-port}{
+        @media #{$mq-tablet-port} {
             padding-left: 40px;
         }
     }
-    
+
     .swiper-button-next,
     .swiper-button-prev {
         display: none;
@@ -22,11 +22,12 @@
         width: 50vw;
         height: 100%;
 
-        @media #{$mq-tablet-port}{
+        @media #{$mq-tablet-port} {
             display: block;
         }
 
-        @media (hover: none){ //this is great especially for touch screen laptops
+        @media (hover: none) {
+            //this is great especially for touch screen laptops
             pointer-events: none;
         }
 
@@ -53,7 +54,7 @@
         display: flex;
         margin-left: 50vw;
         margin-top: 0px;
-        background-color: $br-blue !important;
+        background-color: $br-blue  !important;
         position: relative;
         top: auto;
         left: auto;
@@ -67,14 +68,18 @@
             margin: 0;
             opacity: 0;
 
-           &.swiper-pagination-bullet-active {
+            &.swiper-pagination-bullet-active {
                 background: $br-blue;
             }
         }
 
-        .swiper-pagination-bullet-active ~ .swiper-pagination-bullet {
+        .swiper-pagination-bullet-active~.swiper-pagination-bullet {
             background: $br-grey;
-			opacity: 1;
+            opacity: 1;
         }
+    }
+
+    .caption {
+        padding: 0px 20px 10px 20px;
     }
 }
