--- a/public/wp-content/themes/blackrock/scss/modules/_one_col_copy_image.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_one_col_copy_image.scss
@@ -1,32 +1,32 @@
 .one-col-copy-image {
 
-    
+
     margin-top: 40px;
-    
-    @media #{$mq-tablet-port}{
+
+    @media #{$mq-tablet-port} {
         margin-top: calc(100vw / 12);
     }
 
     .copy-container {
         @include grid;
-        
-        @media #{$mq-tablet-port}{
+
+        @media #{$mq-tablet-port} {
             grid-template-columns: 5fr 7fr;
             grid-template-areas: "copy .";
         }
 
         .copy {
             grid-area: copy;
-            
+
             span {
                 color: $br-blue;
-            } 
+            }
         }
 
         h1 {
             @include headline-30;
-            
-            @media #{$mq-tablet-desk}{
+
+            @media #{$mq-tablet-desk} {
                 @include headline-50;
             }
         }
@@ -34,7 +34,7 @@
 }
 
 .one-col-copy-image.page-hero {
-
+    margin-top: 120px;
 
     .copy {
         margin-top: 80px;
@@ -42,9 +42,9 @@
         padding: 0 20px;
     }
 
-    @media #{$mq-tablet-port}{
+    @media #{$mq-tablet-port} {
         margin-top: calc((100vw / 12));
-        
+
         .copy {
             margin-bottom: calc(100vw / 12);
         }
@@ -53,10 +53,10 @@
     .copy blockquote p {
         @include headline-30;
 
-        @media #{$mq-tablet-desk}{
+        @media #{$mq-tablet-desk} {
             @include headline-50;
         }
- 
+
         &:first-of-type {
             margin-top: 0;
         }
